demo_genData.ipynb works for python3.11.4, tested in an environment where molonaviz also works

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -8,16 +8,16 @@
     "\n",
     "2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
     "\n",
-    "L'objet de cette démo est de présenter une classe chargée de générer une simulation des données des capteurs de pression et de température dans le cas où l'on ne disposerait pas de données issues du projet CAPTEUR. Based on the ``Time_series`` class in ``time_series.py``\n",
+    "The object of this demo is to present a class responsible for generating a simulation of pressure and temperature sensor data in cases where data from the CAPTEUR project is not available. Based on the `Time_series` class in `time_series.py`.\n",
     "\n",
-    "Nous montrerons l'objet Time_Series qui permet de générer des jeux de données purements périodique avec possibilité de bruit gaussien. Nous illustrerons l'interaction de Time_series avec la classe Column et la classe layer. \n",
+    "We will show the `Time_Series` object which allows generating purely periodic datasets with the possibility of Gaussian noise. We will illustrate the interaction of `Time_series` with the `Column` class and the `layer` class.\n",
     "\n",
-    "Deux autres fichiers de démo mettent plutôt en valeur une utilisation globales des classes de time_series.py et val_analy.py.\n"
+    "The other demo file `demo_val_direct.ipynb` highlights a more global use of the classes from `time_series.py` and `val_analy.py`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,17 +33,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Cas sans perturbation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1.1 Paramètrage des signaux\n",
-    "Les signaux sont périodiques purs et il sagit de choisir l'amplitude, la période et la valeur moyenne des signaux de température de la rivière, de l'aquifère et de pression (les conditions limites). Les capteurs T1, T2, T3 du shaft ne sont générés que grâce au modèle direct.\n",
+    "## 1. Signal Parameterization\n",
+    "The signals are purely periodic, and it is necessary to choose the amplitude, period, and mean value of the river temperature, aquifer temperature, and pressure signals (boundary conditions). The T1, T2, T3 sensors in the shaft are only generated using the direct model.\n",
     "\n",
-    "Une amélioration possible de cette classe est de générer des signaux multipériodiques à la manière des listes de paramètres de layer, on donnerait une listes des paramètres des différentes fréquences voulues (diurne, mensuel, annuel, etc...)"
+    "A possible improvement for this class is to generate multi-periodic signals similar to the parameter lists of the layer, where a list of parameters for the different desired frequencies (diurnal, monthly, annual, etc.) would be provided."
    ]
   },
   {
@@ -92,15 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Instanciation de l'objet\n",
-    "L'objet généré aura des valeurs par défaut, il faut utiliser une série de méthode pour mettre à jour ses paramètres essentiels."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2.1 Création de l'objet"
+    "## 2 Instantiating the objects `Time Series` and `Column`\n",
+    "The generated object will have default values, and a series of methods must be used to update its essential parameters. In the initialisation of Time Series, the 3 intermediate temperature sensors T1, T2, T3, are initialized with a linear interpolation between Triv and Taq weighted by the distance from the sensor. Those values initialize the soil Column in a second step. For Time Series dH = Hriv-Haq"
    ]
   },
   {
@@ -130,34 +116,11 @@
     "# print(\"param_T_riv_signal:\", emu_observ_test_user1._param_T_riv)\n",
     "# print(\"param_T_aq_signal:\", emu_observ_test_user1._param_T_aq)\n",
     "# print(\"sigma_meas_P:\", emu_observ_test_user1._sigma_P)\n",
-    "# print(\"sigma_meas_T:\", emu_observ_test_user1._sigma_T)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2.2 Instanciation des series de données temporelles aux limites sur la base des dates de simulation "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user1._generate_all_series(verbose=True)\n",
+    "# print(\"sigma_meas_T:\", emu_observ_test_user1._sigma_T)\n",
+    "\n",
+    "\n",
     "print(f\"dH : {emu_observ_test_user1._molonariP_data}\")\n",
     "print(f\"Tshaft : {emu_observ_test_user1._T_Shaft_measures}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2.3 Génération des points T1, T2, T3 avec le modèle direct\n",
-    "\n",
-    "Il faut d'abord créer un objet colonne qui représente l'expérience"
    ]
   },
   {
@@ -196,15 +159,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut vérifier que l'objet colonne a récupéré les valeurs d'initialisation de Time_series. \n",
-    "On a également des conditions initiales [T1, T2, T3](t=0) qui viennent d'une méthode d'interpolation en ligne brisée\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On utilise la méthode [_measures_column_one_layer(col, layers_list, nb_cells)] qui met à jour les mesures de T1, T2, T3 à chaque instant. Les objets Column et Time_series sont mis à jour ensemble."
+    "## 3 Generating temperature in the river bed\n",
+    "\n",
+    "We use the [_measures_column_one_layer(col, layers_list, nb_cells)] method, which updates the measurements for T1, T2 and T3 at each point in time with the direct model pyheatmy. The sensor time series are then perturbated with a gaussian noise in the Time series object. We display the temperature simulated at sensors."
    ]
   },
   {
@@ -215,10 +172,10 @@
    "source": [
     "# on résout le modèle direct avec les observations simulées\n",
     "nb_cells = 100\n",
-    "print(emu_observ_test_user1._T_Shaft)\n",
+    "# print(emu_observ_test_user1._T_Shaft)\n",
     "emu_observ_test_user1._measures_column_one_layer(col, layers_list, nb_cells)\n",
     "#emu_observ_test_user1._plot_molonariT_data()\n",
-    "col.plot_temperature_at_sensors(verbose=True)\n",
+    "col.plot_temperature_at_sensors(verbose=False)\n",
     "\n"
    ]
   },
@@ -226,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On compare simul et obs, normalement idem...."
+    "The simulated temperatures with pyheatmy are compared to the initial values of the Shaft which were interpolated. Without surprise, they are very different for an advective configuration (high k value)"
    ]
   },
   {
@@ -237,6 +194,13 @@
    "source": [
     "\n",
     "col.plot_compare_temperatures_sensors()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here are temperature profiles simulated by pyheatmy"
    ]
   },
   {
@@ -296,26 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Need to generate a MOLONARI dataset in time_series.py, printing the T at sensors and P measured. Ie a sort of export Processed data"
+    "# Multilayered riverbed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test du cas multilayer "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +282,7 @@
     "P_T_aq = 9999 # à mettre dans le init\n",
     "\n",
     "dH_amp = 0\n",
-    "dH_offset = 1\n",
+    "dH_offset = 1.\n",
     "P_dh = -9999 #14*24*4*dt\n",
     "\n",
     "depth_sensors = [.1, .15, .25, .3, .4] # on a mis 5 capteurs dans le shaft au lieu de 4 pour montrer que le code s'adapte"
@@ -340,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,12 +313,12 @@
    "outputs": [],
    "source": [
     "emu_observ_test_user4 = Time_series.from_dict(time_series_dict_user4)\n",
-    "emu_observ_test_user4._generate_all_series()"
+    "# emu_observ_test_user4._generate_all_series()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,18 +355,11 @@
    "source": [
     "nb_cells = 100\n",
     "emu_observ_test_user4._measures_column_one_layer(col4, layers_list4, nb_cells)\n",
-    "\n",
-    "# emu_observ_test_user4._generate_perturb_T_riv_dH_series()\n",
-    "# emu_observ_test_user4._generate_perturb_Shaft_Temp_series()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user4._T_Shaft_perturb"
+    "col4.plot_temperature_at_sensors(verbose=False)\n",
+    "# col4.plot_compare_temperatures_sensors()\n",
+    "nt = len(col4._temperatures[0,:])\n",
+    "dplot=15\n",
+    "col4.plot_temperatures_umbrella(round(nt/dplot))\n"
    ]
   },
   {
@@ -459,11 +402,18 @@
    "source": [
     "plt.imshow(col._temperatures[:,:], aspect='auto')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfinished, now need to rerun a column with the proper sensor records from the first simulation + perturbation that are in Time Series See final step of #3 of the Monolayer case"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
