--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -8,16 +8,16 @@
     "\n",
     "2024 developped by Nicolas Flipo from demo_gen_test.ipynb created by Guillaume de Rochefort during MOLONARI 2022 \n",
     "\n",
-    "The object of this demo is to present a class responsible for generating a simulation of pressure and temperature sensor data in cases where data from the CAPTEUR project is not available. Based on the `Time_series` class in `time_series.py`.\n",
+    "The object of this demo is to present a class responsible for generating a simulation of pressure and temperature sensor data in cases where data from the CAPTEUR project is not available. Based on the `synthetic_MOLONARI` class in `synthetic_MOLONARI.py`.\n",
     "\n",
-    "We will show the `Time_Series` object which allows generating purely periodic datasets with the possibility of Gaussian noise. We will illustrate the interaction of `Time_series` with the `Column` class and the `layer` class.\n",
+    "We will show the `synthetic_MOLONARI` object which allows generating purely periodic datasets with the possibility of Gaussian noise. We will illustrate the interaction of `synthetic_MOLONARI` with the `Column` class and the `layer` class.\n",
     "\n",
-    "The other demo file `demo_val_direct.ipynb` highlights a more global use of the classes from `time_series.py` and `val_analy.py`.\n"
+    "The other demo file `demo_val_direct.ipynb` highlights a more global use of the classes from `synthetic_MOLONARI.py` and `val_analy.py`.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.11.4",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
