Remove savefig from DREAM_v1, don't run DREAM_v3

--- a/pyheatmy/pyheatmy/DREAM_v1.ipynb
+++ b/pyheatmy/pyheatmy/DREAM_v1.ipynb
@@ -749,8 +749,7 @@
     "for k in range(nb_param):\n",
     "    plt.subplot(2, 2, k+1)\n",
     "    plt.hist(_params_without_chains[:,0,k], bins = 100, label=f\"{dico[k]}\")\n",
-    "    plt.legend();\n",
-    "plt.savefig(f\"../images/threshold_{int(threshold*100)}.png\")"
+    "    plt.legend();\n"
    ]
   },
   {
