--- a/pyheatmy/pyheatmy/DREAM_v3.ipynb
+++ b/pyheatmy/pyheatmy/DREAM_v3.ipynb
@@ -306,7 +306,7 @@
     "n_sous_ech_time = 2 # 1 mesure considérée par demi-heure\n",
     "n_sous_ech_space = 4 # 1 mesure considérée tous les 2 cm\n",
     "nb_cells_sous_ech = int(np.ceil(nb_cells//n_sous_ech_space))\n",
-    "nb_times_sous_ech = int(np.ceil(nb_times//n_sous_ech_temp))\n",
+    "nb_times_sous_ech = int(np.ceil(nb_times//n_sous_ech_time))\n",
     "X = np.array([np.array(all_priors.sample()) for _ in range(nb_chain)])\n",
     "X = np.array([np.array([X[c][l].params for l in range(nb_layer)]) for c in range(nb_chain)])\n",
     "_params = np.zeros((nb_iter + 1, nb_chain, nb_layer, nb_param))\n",
@@ -992,7 +992,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyheatmy",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
@@ -1006,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
