--- a/pyheatmy/pyheatmy/DREAM_v3.ipynb
+++ b/pyheatmy/pyheatmy/DREAM_v3.ipynb
@@ -992,7 +992,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyheatmy",
+   "display_name": "py3.11.4",
    "language": "python",
    "name": "python3"
   },
@@ -1006,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
