--- a/hardwareProgramming/Documentation 2023/AtmoCONTROL_param.ipynb
+++ b/hardwareProgramming/Documentation 2023/AtmoCONTROL_param.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the program for calculating how to set the climate chamber. The first part of the program has the highest temprerature set at 25℃, and the lowest temperature varies with your input temperature difference. The second part of the program needs you to input your average temperature and the temperature difference. You can choose either of them to use and follow the output instructions to set up the climate chamber."
+    "This is the program for calculating how to set the climate chamber. The first part of the program needs you to input your average temperature and the temperature difference. The second part of the program has the highest temprerature set at 25℃, and the lowest temperature varies with your input temperature difference. You can choose either of them to use and follow the output instructions to set up the climate chamber."
    ]
   },
   {
