--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -20,6 +20,29 @@
     "import sklearn as sk \n",
     "from pyheatmy import * "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'time_series_multiperiodic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#On commence par créer un signal d'entrée grace à la classe time_series_multiperiodic, que l'on forcera dans la classe Synthetic_Molonari ensuite\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m T_riv \u001b[38;5;241m=\u001b[39m \u001b[43mtime_series_multiperiodic\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulti_periodic\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'time_series_multiperiodic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#On commence par créer un signal d'entrée grace à la classe time_series_multiperiodic, que l'on forcera dans la classe Synthetic_Molonari ensuite\n",
+    "\n",
+    "T_riv = time_series_multiperiodic(\"multi_periodic\")"
+   ]
   }
  ],
  "metadata": {
@@ -29,7 +52,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
