initialization of parameters for time_series_multiperiodic class

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,30 +18,30 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn as sk \n",
-    "from pyheatmy import * "
+    "from pyheatmy import * \n",
+    "from pyheatmy.time_series_multiperiodic import time_series_multiperiodic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'time_series_multiperiodic' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#On commence par créer un signal d'entrée grace à la classe time_series_multiperiodic, que l'on forcera dans la classe Synthetic_Molonari ensuite\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m T_riv \u001b[38;5;241m=\u001b[39m \u001b[43mtime_series_multiperiodic\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmulti_periodic\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'time_series_multiperiodic' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#On commence par créer un signal d'entrée grace à la classe time_series_multiperiodic, que l'on forcera dans la classe Synthetic_Molonari ensuite\n",
     "\n",
-    "T_riv = time_series_multiperiodic(\"multi_periodic\")"
+    "T_riv = time_series_multiperiodic(\"multi_periodic\")\n",
+    "\n",
+    "#On regarde des variations de température sur une année, on définit une période journalière, et une période annuelle\n",
+    "\n",
+    "T_MOY_ANNUELLE = 14 #°C, représente l'offset commun de nos signaux de température\n",
+    "\n",
+    "T_AMP_ANNUELLE = 6 #°C, représente l'amplitude de variation de température annuelle\n",
+    "\n",
+    "T_AMP_JOURNALIERE = 8 #°C, représente l'amplitude de variation de température journalière\n",
+    "\n",
+    "t_debut = (2024, 4, 15, 8, 0, 0) #On commence le 15 avril 2024 à 8h00\n",
+    "t_fin = (2025, 4, 15, 8, 0, 0) #On finit le 15 avril 2025 à 8h00, on regarde ce qu'il se passe sur un an. "
    ]
   }
  ],
