From temperature matrices with different values of K, plot linear regression of ln(A_z / A_0) to assess the linearity even in diffusive cases

--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -18,7 +18,19 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn as sk \n",
-    "from pyheatmy import * "
+    "from pyheatmy import * \n",
+    "import core.py as c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creation of a Column instance\n",
+    "\n",
+    "diff_column = Column"
    ]
   }
  ],
