--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -1070,11 +1070,11 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Mosaïque des différentes courbes en fonction des valeurs de K (list_K = liste de ces valeurs)\n",
-    "# T est la liste des matrices de températures pour différentes valeurs de K\n",
+    "# Mosaïque des différentes courbes en fonction des valeurs de k (list_K = liste de ces valeurs)\n",
+    "# T est la liste des matrices de températures pour différentes valeurs de k\n",
     "def plot_mosaic(depths, list_T, list_K):  \n",
     "    # assert len(list_T[0]) == lent(depths), \"a temperature measure must be assigned to a single depth\"\n",
-    "    assert len(list_T) == len(list_K), 'The number of K values does not match the number a temperature matrices'\n",
+    "    assert len(list_T) == len(list_K), 'The number of k values does not match the number a temperature matrices'\n",
     "    n_rows = len(list_K)//2 + len(list_K)%2\n",
     "    fig, ax = plt.subplots(n_rows, ncols=2, constrained_layout = True)\n",
     "    X = np.array(depths).reshape(-1,1)\n",
@@ -1093,7 +1093,7 @@
     "                ax[i][j].plot(X, y_pred, color=\"k\")\n",
     "                ax[i][j].set_xlabel('profondeur (unit)')\n",
     "                ax[i][j].set_ylabel('log(A_z / A_0)')\n",
-    "                ax[i][j].set_title('Rapport des ln(A_z / A_0) avec -log(K) =' + str(list_K[2*i] + j), size = 10)   \n",
+    "                ax[i][j].set_title('Rapport des ln(A_z / A_0) avec -log(k) =' + str(list_K[2*i] + j), size = 10)   \n",
     "                ax[i][j].text(0.9, 0.9, \"Pearson coefficient : \" + str(round(Pearson_coefficient,2)), transform=ax[i][j].transAxes, ha='right', va='top')\n",
     "    plt.show()\n"
    ]
@@ -1117,7 +1117,7 @@
     "    plot_linear_regression(depths, T)\n",
     "\n",
     "# test de plot_mosaic\n",
-    "# Création de 4 valeurs de K absurde\n",
+    "# Création de 4 valeurs de k absurde\n",
     "\n",
     "def test_plot_mosaic():\n",
     "    T = np.zeros((10,10))\n",
