--- a/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
+++ b/pyheatmy/research/Temp_ampl_ratio_diffusive_case.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,6 @@
     "t_debut = (2024, 4, 15, 8, 0, 0)  # (year, month, day, hour, minute, second)\n",
     "t_fin = (2024, 4, 20, 8, 0, 0)\n",
     "dt = int(NSECINHOUR / 4)  #On se place dans le cas d'un point de mesure toutes les quinze minutes (à moduler en fonction de l'intervale temporel considéré)\n",
-    "nday = 3\n",
     "\n",
     "moinslog10IntrinK = 11\n",
     "lambda_s = 2 # test cas purement advectif\n",
@@ -61,9 +60,9 @@
     "range_of_minus_log_10_K = [10,11,12,13,14,15]  # The values we want to test\n",
     "\n",
     "n = 0.1  # porosité\n",
-    "nb_cells=20 # nombre de cellules, une tous les 5 centimètres \n",
+    "nb_cells=100 # nombre de cellules, une tous les 5 centimètres \n",
     "depth_sensors = [.1, .2, .3, .4]\n",
-    "Zbottom = 0.4\n",
+    "Zbottom = 1\n",
     "river_bed = 1.  # profondeur de la colonne en mètres\n",
     "last_cell = int(9/10 * nb_cells)  # on écarte les dernières valeurs pour éviter les effets de bord\n",
     "depth_cells = np.linspace(0, river_bed, nb_cells)\n",
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +107,7 @@
     "    \"param_T_aq_signal\": [T_aq_amp, P_T_aq, T_aq_offset],\n",
     "    \"sigma_meas_P\": sigma_meas_P,\n",
     "    \"sigma_meas_T\": sigma_meas_T, #float\n",
+    "    \"verbose\": False\n",
     "}\n",
     "# instanciation du simulateur de données\n",
     "emu_observ_test_user1 = synthetic_MOLONARI.from_dict(time_series_dict_user1)\n"
@@ -122,19 +122,21 @@
     "#On utilise le jeu de date précédent pour créer un signal de température multipériodique \n",
     "\n",
     "# signal multipériodique\n",
-    "'''T_riv.create_multiperiodic_signal([T_AMP_ANNUELLE, T_AMP_JOURNALIERE], [[P_an, 'm'], [P_jour, 'h']], emu_observ_test_user1._dates, dt,\n",
-    "                                   offset=T_MOY_ANNUELLE)'''\n",
+    "T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates, dt,\n",
+    "                                   offset=T_riv_offset)\n",
     "\n",
+    "'''\n",
     "# simple signal\n",
     "T_riv.create_multiperiodic_signal([T_riv_day_amp], [[P_T_riv_day, 's']], emu_observ_test_user1._dates, dt,\n",
-    "                                   offset=T_riv_offset)\n",
+    "                                   offset=T_riv_offset, verbose = True)\n",
+    "'''\n",
     "\n",
     "# T_riv.plot() #On affiche le signal de température créé"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +146,7 @@
     "\n",
     "#Puis on applique les méthodes _generate_Shaft_Temp_series et _generate_perturb_Shaft_Temp_series pour changer les valeurs dépendante du nouveau T_riv\n",
     "\n",
-    "emu_observ_test_user1._generate_Shaft_Temp_series()\n",
+    "emu_observ_test_user1._generate_Shaft_Temp_series(verbose = False)\n",
     "emu_observ_test_user1._generate_perturb_Shaft_Temp_series()\n",
     "emu_observ_test_user1._generate_perturb_T_riv_dH_series()"
    ]
@@ -192,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "#On définit une fonction pour pouvoir compiler en faisant varier la valeur de la charge (et donc le régime infiltration ou exfiltration vers la \n",
     "#rivière) ainsi que la valeur de la porosité (et donc le régime de diffusion de la chaleur - majoritairement diffusif ou advectif)\n",
     "\n",
-    "def profil_temperature(offset_H, moinslog10IntrinK): \n",
+    "def profil_temperature(offset_H, moinslog10IntrinK, verbose = False): \n",
     "    time_series_dict_user1 = {\n",
     "    \"offset\":.0,\n",
     "    \"depth_sensors\": depth_sensors,\n",
@@ -209,14 +211,16 @@
     "    \"param_T_aq_signal\": [T_aq_amp, P_T_aq, T_aq_offset],\n",
     "    \"sigma_meas_P\": sigma_meas_P,\n",
     "    \"sigma_meas_T\": sigma_meas_T, \n",
+    "    \"verbose\" : verbose\n",
     "}\n",
     "    emu_observ_test_user1 = synthetic_MOLONARI.from_dict(time_series_dict_user1)\n",
     "    \n",
     "    T_riv.create_multiperiodic_signal([T_riv_year_amp, T_riv_day_amp], [[P_T_riv_year, 's'], [P_T_riv_day, 's']], emu_observ_test_user1._dates, dt,\n",
-    "                                   offset=T_riv_offset)\n",
+    "                                   offset=T_riv_offset, verbose = False)\n",
+    "    \n",
     "    emu_observ_test_user1._T_riv = T_riv.multi_periodic[1][:]\n",
     "\n",
-    "    emu_observ_test_user1._generate_Shaft_Temp_series()\n",
+    "    emu_observ_test_user1._generate_Shaft_Temp_series(verbose = False)\n",
     "    emu_observ_test_user1._generate_perturb_Shaft_Temp_series()\n",
     "    emu_observ_test_user1._generate_perturb_T_riv_dH_series()\n",
     "\n",
@@ -243,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,14 +298,14 @@
     "    intercept = Lr.intercept\n",
     "    lm = linear_model.LinearRegression()\n",
     "    lm.fit(X, Y)\n",
-    "    plt.scatter(X, Y, color=\"r\", marker=\"o\", s=30)\n",
+    "    plt.scatter(X, Y, color=\"r\", marker=\"o\", s=10)\n",
     "    y_pred = lm.predict(X)\n",
     "    plt.plot(X, y_pred, color=\"k\")\n",
     "    plt.xlabel(\"profondeur (unit)\")\n",
     "    plt.ylabel(\"ln(A_z / A_0)\")\n",
     "    plt.title(\"Régression linéaire sur le rapport des logarithmes des amplitudes\")\n",
-    "    plt.figtext(.6, .8, \"y = \" + str(slope) + \"x + \" + str(intercept))\n",
-    "    plt.figtext(.6, .7, \"Pearson coefficient : \" + str(Pearson_coefficient))\n",
+    "    plt.figtext(.6, .8, \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2)))\n",
+    "    plt.figtext(.6, .7, \"Pearson coefficient : \" + str(round(Pearson_coefficient,2)))\n",
     "    plt.show()\n",
     "\n",
     "\n",
@@ -323,7 +327,7 @@
     "                intercept = Lr.intercept\n",
     "                lm = linear_model.LinearRegression()\n",
     "                lm.fit(X, Y)\n",
-    "                ax[i][j].scatter(X, Y, color=\"r\", marker=\"o\", s=30)\n",
+    "                ax[i][j].scatter(X, Y, color=\"r\", marker=\"o\", s=10)\n",
     "                y_pred = lm.predict(X)\n",
     "                ax[i][j].plot(X, y_pred, color=\"k\")\n",
     "                ax[i][j].set_xlabel('profondeur (unit)')\n",
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +381,7 @@
     "\n",
     "profil_temp = profil_temperature(dH_offset, moinslog10IntrinK)[:last_cell,:]\n",
     "plot_ln_amp(depth_cells[0:last_cell], np.transpose(profil_temp))\n",
-    "plot_linear_regression(depth_cells[0:last_cell], np.transpose(profil_temp))\n"
+    "plot_linear_regression(depth_cells[0:last_cell], np.transpose(profil_temp))"
    ]
   },
   {
