creation of a column object, first try to compute MCMC

--- a/pyheatmy/research/which_point_highest_K_val.ipynb
+++ b/pyheatmy/research/which_point_highest_K_val.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        " 'point53_temperature_traité.csv']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,8 +142,82 @@
     "dico['temperature'] = temperature\n",
     "\n",
     "print(dico['pression'].head())\n",
-    "print(dico['temperature'].head())"
+    "print(dico['temperature'].head())\n",
+    "\n",
+    "dico['temperature'].columns = ['dates', 'T_10', 'T_20', 'T_30', 'T_40']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('23-07-2015 14:00', (0.0858643254074198, 18.224)), ('23-07-2015 14:15', (0.0861528697161693, 18.081)), ('23-07-2015 14:30', (0.0861893984470073, 18.057)), ('23-07-2015 14:45', (0.0862567747756304, 18.057)), ('23-07-2015 15:00', (0.0860715126342083, 18.176))]\n",
+      "[('23-07-2015 14:00', (18.319, 17.938, 18.247, 18.39)), ('23-07-2015 14:15', (18.224, 17.653, 17.915, 17.986)), ('23-07-2015 14:30', (18.105, 17.558, 17.796, 17.796)), ('23-07-2015 14:45', (18.081, 17.534, 17.748, 17.748)), ('23-07-2015 15:00', (18.057, 17.51, 17.724, 17.724))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#On va maintenant compute la MCMC pour les données de pression et de température, pour trouver une valeur de \n",
+    "#perméabilité pour chaque point de mesure\n",
+    "\n",
+    "#On commence par créer des listes de tuple pour les données de pression et de température\n",
+    "\n",
+    "data_pression = list(zip(dico['pression']['dates'], list(zip( dico['pression']['dH'], dico['pression']['temperature_stream']))))\n",
+    "data_temperature = list(zip(dico['temperature']['dates'], zip(dico['temperature']['T_10'], dico['temperature']['T_20'], dico['temperature']['T_30'], dico['temperature']['T_40'])))\n",
+    "\n",
+    "print (data_pression[:5])\n",
+    "print (data_temperature[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#On initialise les paramètres de la MCMC et de l'objet column à partir d'un dico\n",
+    "\n",
+    "Z_bottom = .4\n",
+    "depth_sensors = [0.1, 0.2, 0.3, Z_bottom]\n",
+    "\n",
+    "col_dict = {\n",
+    "\t\"river_bed\": .4, \n",
+    "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
+    "\t\"offset\": .0,\n",
+    "    \"dH_measures\": data_pression,\n",
+    "    \"T_measures\": data_temperature,\n",
+    "    \"sigma_meas_P\": 0.01, #float\n",
+    "    \"sigma_meas_T\": 0.1, #float\n",
+    "}\n",
+    "\n",
+    "col = Column.from_dict(col_dict)\n",
+    "\n",
+    "priors = {\n",
+    "    \"moinslog10IntrinK\": ((10, 16), .01), # (intervalle, sigma)\n",
+    "    \"n\": ((.01, .25), .01),\n",
+    "    \"lambda_s\": ((1, 10), .1),\n",
+    "    \"rhos_cs\": ((1e6,1e7), 1e5),\n",
+    "}\n",
+    "\n",
+    "all_priors = [\n",
+    "    ['Couche 1', Z_bottom, priors],\n",
+    "]\n",
+    "\n",
+    "#On va maintenant lancer la MCMC\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
